src/nimxla/private/xla_wrapper.h

typedef XlaBuilder *xla_builder;
typedef XlaOp *xla_op;
typedef Status *status;
typedef Shape *shape;
typedef Literal *literal;
typedef XlaComputation *xla_computation;
typedef struct _xla_builder *xla_builder;
typedef struct _xla_op *xla_op;
typedef struct _status *status;
typedef struct _shape *shape;
typedef struct _literal *literal;
typedef struct _xla_computation *xla_computation;
// Ops
xla_op op_add(const xla_op, const xla_op);
xla_op op_sub(const xla_op, const xla_op);
xla_op op_mul(const xla_op, const xla_op);
xla_op op_div(const xla_op, const xla_op);
xla_op op_rem(const xla_op, const xla_op);
xla_op op_max(const xla_op, const xla_op);
xla_op op_min(const xla_op, const xla_op);
xla_op op_and(const xla_op, const xla_op);
xla_op op_or(const xla_op, const xla_op);
xla_op op_xor(const xla_op, const xla_op);
xla_op op_atan2(const xla_op, const xla_op);
xla_op op_pow(const xla_op, const xla_op);
xla_op op_dot(const xla_op, const xla_op);
xla_op op_dot_general(const xla_op, const xla_op, const int64_t *, size_t,
                      const int64_t *, size_t, const int64_t *, size_t,
                      const int64_t *, size_t);
xla_op op_conv(const xla_op, const xla_op, size_t, const int64_t *, const int64_t *,
               const int64_t *, const int64_t *, const int64_t *, const int64_t *,
               size_t, const int64_t *, const int64_t *, int64_t, int64_t);
xla_op op_eq(const xla_op, const xla_op);
xla_op op_ne(const xla_op, const xla_op);
xla_op op_ge(const xla_op, const xla_op);
xla_op op_gt(const xla_op, const xla_op);
xla_op op_le(const xla_op, const xla_op);
xla_op op_lt(const xla_op, const xla_op);
xla_op op_not(const xla_op);
xla_op op_abs(const xla_op);
xla_op op_exp(const xla_op);
xla_op op_expm1(const xla_op);
xla_op op_floor(const xla_op);
xla_op op_ceil(const xla_op);
xla_op op_round(const xla_op);
xla_op op_log(const xla_op);
xla_op op_log1p(const xla_op);
xla_op op_logistic(const xla_op);
xla_op op_sign(const xla_op);
xla_op op_clz(const xla_op);
xla_op op_cos(const xla_op);
xla_op op_sin(const xla_op);
xla_op op_tanh(const xla_op);
xla_op op_real(const xla_op);
xla_op op_imag(const xla_op);
xla_op op_sqrt(const xla_op);
xla_op op_rsqrt(const xla_op);
xla_op op_cbrt(const xla_op);
xla_op op_is_finite(const xla_op);
xla_op op_neg(const xla_op);
xla_op op_lower_triangle(const xla_op);
xla_op op_upper_triangle(const xla_op);
xla_op op_einsum1(const xla_op, const char *);
xla_op op_einsum2(const xla_op, const xla_op, const char *);
xla_op op_copy(const xla_op);
xla_op op_clone(const xla_op);
xla_op op_zeros_like(const xla_op);
xla_op op_zero_like(const xla_op);
xla_op op_zero(const xla_builder, int);
xla_op op_one(const xla_builder, int);
xla_op op_min_value(const xla_builder, int);
xla_op op_max_value(const xla_builder, int);
xla_op op_reshape(const xla_op, size_t, const int64_t *);
xla_op op_reverse(const xla_op, size_t, const int64_t *);
xla_op op_broadcast(const xla_op, size_t, const int64_t *);
xla_op op_broadcast_in_dim(const xla_op, size_t, const int64_t *, size_t,
                           const int64_t *);
xla_op op_collapse(const xla_op, size_t, const int64_t *);
xla_op op_transpose(const xla_op, size_t, const int64_t *);
xla_op op_clamp(const xla_op, const xla_op, const xla_op);
xla_op op_select(const xla_op, const xla_op, const xla_op);
xla_op op_rng_uniform(const xla_op, const xla_op, int, int, const int64_t *);
xla_op op_rng_normal(const xla_op, const xla_op, int, int, const int64_t *);
xla_op op_slice_in_dim(const xla_op, int64_t, int64_t, int64_t, int64_t);
xla_op op_concat_in_dim(const xla_op, const xla_op *, size_t, int64_t);
xla_op op_tuple(const xla_builder, const xla_op *, size_t);
xla_op op_get_tuple_element(const xla_op, int64_t);
xla_op op_gather(const xla_op, const xla_op, const int64_t *, size_t,
                 const int64_t *, size_t, const int64_t *, size_t,
                 int64_t, const int64_t *, size_t);
xla_op op_scatter(const xla_op, const xla_op, const xla_op, const xla_computation,
                  int64_t, const int64_t *, size_t, const int64_t *, size_t, 
                  const int64_t *, size_t);
xla_op op_convert_element_type(const xla_op, int);
xla_op op_dimensions_size(const xla_op, int64_t);
xla_op op_reduce(const xla_op, const xla_op, const xla_computation,
                 const int64_t *, size_t);
xla_op op_reduce2(const xla_builder, const xla_op, const xla_op,
                 const xla_op, const xla_op, const xla_computation, 
                 const int64_t *, size_t);
xla_op op_reduce_window(const xla_op, const xla_op, const xla_computation, size_t,
                 const int64_t *, const int64_t *, size_t, const int64_t *, const int64_t *);
xla_op op_select_and_scatter(const xla_op, const xla_computation, size_t,
                 const int64_t *, int64_t *, size_t, const int64_t *, const int64_t *,
                 const xla_op, const xla_op, const xla_computation);
xla_op op_internal_error(const xla_builder, const char *);
xla_op op_unknown_error(const xla_builder, const char *);
xla_op op_invalid_argument_error(const xla_builder, const char *);
xla_op op_iota1(const xla_builder, int, size_t);
xla_op op_iota(const xla_builder, int, size_t, const int64_t *, int64_t);
xla_op op_while(const xla_computation, const xla_computation, const xla_op);
xla_op op_conditional(const xla_op, const xla_op, const xla_computation,
                      const xla_op, const xla_computation);
xla_builder op_builder(const xla_op);
int xla_op_valid(const xla_op);
void xla_op_free(xla_op);
int shape_dimensions_size(const shape);
size_t shape_tuple_shapes_size(const shape);
shape shape_tuple_shapes(const shape, int);
int shape_element_type(const shape);
int64_t shape_dimensions(const shape, int);
void shape_free(shape);
shape make_shape_array(int, size_t, const int64_t *);
shape make_shape_tuple(size_t, const shape *);
literal literal_create_from_shape(int, const int64_t *, size_t);
literal literal_create_from_shape_and_data(int, const int64_t *, size_t,
                                           const void *, size_t);
literal literal_clone(const literal);
status literal_reshape(const literal, const int64_t *, size_t, literal *);
status literal_convert(const literal, int, literal *);
int64_t literal_element_count(const literal);
int literal_element_type(const literal);
void literal_shape(const literal, shape *);
void literal_decompose_tuple(literal, literal *, size_t);
int64_t literal_size_bytes(const literal);
void literal_copy_to(const literal, void *, size_t);
void literal_copy_from(literal, const void *, size_t);
literal literal_make_tuple(const literal *, size_t);
literal literal_make_tuple_owned(const literal *, size_t);
void literal_free(literal);
void status_free(status);
char *status_error_message(status);